--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,3 +1,8 @@
 {
-  "Язык": "English"
+  "Язык": "English",
+  "Страница не найдена": "Page Not Found",
+  "Произошла непредвиденная ошибка": "Error",
+  "Обновить страницу": "Reload page",
+  "Главная": "General page",
+  "О сайте": "About page"
 }
